<resources>
    <string name="app_name">DeathWatch</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="basic_skills">Basic Skills</string>
    <string name="armour">Armour</string>
    <string name="weapons">Weapons</string>
    <string name="title_text">View/edit your Character\'s :</string>
    <string name="pic_desc">Warhammer Space Marine</string>
</resources>
