<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="#000000">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:src="@drawable/deathwatchart5"
        android:scaleType="centerCrop"
        android:id="@+id/imageView2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="false"
        android:contentDescription="@string/pic_desc" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_text"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:id="@+id/textView"
            android:layout_weight=".80"
            android:gravity="bottom"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".2"
            android:gravity="top">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/basic_skills"
                android:id="@+id/bSkill"
                android:layout_weight=".3"
                android:backgroundTint="#eb3b3b3b"
                android:textColor="#ffffffff"
                android:elegantTextHeight="false"
                android:textSize="20sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/armour"
                android:id="@+id/bArmour"
                android:layout_weight=".3"
                android:backgroundTint="#eb3b3b3b"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/weapons"
                android:id="@+id/bWeapons"
                android:layout_weight=".3"
                android:backgroundTint="#eb3b3b3b"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
